API USER BY ID&FIX swag UI
