# simple_api/docs/swagger.json
@@ -16,7 +16,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Get"
                 ],
                 "summary": "Get all users",
                 "responses": {
@@ -46,7 +46,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Post"
                 ],
                 "summary": "Add a new user",
                 "parameters": [
@@ -83,13 +83,46 @@
             }
         },
         "/api/v1/users/{id}": {
+            "get": {
+                "description": "Get details of a user by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Get"
+                ],
+                "summary": "Get user by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.User"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Update details of a user",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Put"
                 ],
                 "summary": "Update user information",
                 "parameters": [
@@ -137,7 +170,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Delete"
                 ],
                 "summary": "Delete user by ID",
                 "parameters": [
@@ -210,41 +243,6 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "get": {
-                "description": "Get details of a user by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Get user by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handler.User"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
